Breadcrumb alignment fix

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -350,10 +350,6 @@
     margin: 20px 0 20px;
 }
 
-.breadcrumb {
-    padding: 3px 0 0 15px;
-}
-
 .signup-header {
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
